--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@ pnpm-lock.yaml
 /prisma/db.sqlite
 /prisma/db.sqlite-journal
 db.sqlite
+/prisma/populate.sql
+/prisma/old.sql
 
 # next.js
 /.next/
