--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
       retries: 5
       start_period: 3s
     environment:
-      POSTGRES_PASSWORD: postgres
+      #POSTGRES_PASSWORD: postgres
       POSTGRES_DB: sge2
     volumes:
       - sge2-db-data:/var/lib/postgresql/data
