--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,14 +3,15 @@ services:
     image: postgres:14-alpine
     hostname: db
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: ["CMD-SHELL", "pg_isready -U ${PGUSER}"]
       interval: 2s
       timeout: 15s
       retries: 5
       start_period: 3s
     environment:
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: sge2
+      POSTGRES_DB: ${PGDATABASE}
+      POSTGRES_USER: ${PGUSER}
+      POSTGRES_PASSWORD: ${PGPASSWORD}
     volumes:
       - sge2-db-data:/var/lib/postgresql/data
       - ./pg_dump.sql:/docker-entrypoint-initdb.d/pg_dump.sql
@@ -20,9 +21,8 @@ services:
   app:
     image: registry.frba.utn.edu.ar/tst/sge2
     hostname: app
-    environment:
-      DATABASE_URL: postgres://postgres:postgres@db:5432/sge2
-      NEXTAUTH_URL: http://localhost:8000/
+    env_file:
+      - .env
     networks:
       - sge2
     depends_on:
