--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "next": "^14.2.1",
     "next-auth": "^4.24.7",
     "next-i18next": "^15.3.0",
+    "nodemailer": "^6.9.15",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "react-hook-form": "^7.53.0",
@@ -74,6 +75,7 @@
     "@types/eslint": "^8.56.2",
     "@types/lodash": "^4.17.6",
     "@types/node": "^20.11.20",
+    "@types/nodemailer": "^6.4.16",
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
