--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,7 @@ DISCORD_CLIENT_ID=""
 DISCORD_CLIENT_SECRET=""
 SMTP_EMAIL_USER=""
 SMTP_EMAIL_PASSWORD=""
+
+# Email
+SMTP_EMAIL_USER=""
+SMTP_EMAIL_PASSWORD=""
