--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,15 +3,15 @@ services:
     image: postgres:14-alpine
     hostname: db
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${PGUSER}"]
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 2s
       timeout: 15s
       retries: 5
       start_period: 3s
     environment:
-      POSTGRES_DB: ${PGDATABASE}
-      POSTGRES_USER: ${PGUSER}
-      POSTGRES_PASSWORD: ${PGPASSWORD}
+      POSTGRES_DB: sge2
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
     volumes:
       - sge2-db-data:/var/lib/postgresql/data
       - ./pg_dump.sql:/docker-entrypoint-initdb.d/pg_dump.sql
@@ -21,8 +21,6 @@ services:
   app:
     image: registry.frba.utn.edu.ar/tst/sge2
     hostname: app
-    env_file:
-      - .env
     networks:
       - sge2
     depends_on:
