--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,6 +20,8 @@ services:
 
   app:
     image: registry.frba.utn.edu.ar/ext/sge2
+    env_file:
+      - .env
     hostname: app
     networks:
       - sge2
