--- a/package.json
+++ b/package.json
@@ -44,12 +44,14 @@
     "@trpc/client": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
+    "@types/react-datepicker": "^6.2.0",
     "@vercel/speed-insights": "^1.0.12",
     "@zedux/react": "^1.2.2",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.1.8",
     "geist": "^1.3.0",
     "lodash": "^4.17.21",
@@ -59,6 +61,7 @@
     "next-i18next": "^15.3.0",
     "nodemailer": "^6.9.15",
     "react": "^18.3.0",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.0",
     "react-hook-form": "^7.53.0",
     "server-only": "^0.0.1",
