Mejorado envio de mails

--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,16 @@ DISCORD_CLIENT_SECRET=""
 SMTP_EMAIL_USER=""
 SMTP_EMAIL_PASSWORD=""
 
-# Email
-SMTP_EMAIL_USER=""
-SMTP_EMAIL_PASSWORD=""
+# Envio de mails
+SMTP_MAIL_EMISOR="testutn88@gmail.com"
+SMTP_HOST="smtp.gmail.com"
+SMTP_PORT=587
+SMTP_SECURE=false
+
+SMTP_TESTING=true
+SMTP_TESTING_EMAIL_RECEPTOR="alexanderarmua1@gmail.com"
+SMTP_TESTING_EMAIL_USER="testutn88@gmail.com"
+SMTP_TESTING_EMAIL_PASSWORD="aapr jaox ryrr efjs"
+
+# Ruta actual
+RUTA_ACTUAL=http://localhost:3000
