Agregado comentarios al example

--- a/.env.example
+++ b/.env.example
@@ -27,15 +27,15 @@ SMTP_EMAIL_USER=""
 SMTP_EMAIL_PASSWORD=""
 
 # Envio de mails
-SMTP_MAIL_EMISOR="testutn88@gmail.com"
-SMTP_HOST="smtp.gmail.com"
-SMTP_PORT="587"
-SMTP_SECURE="false"
+SMTP_MAIL_EMISOR="testutn88@gmail.com" # A nombre de quien se envian los mails
+SMTP_HOST="smtp.gmail.com" # Servidor SMTP
+SMTP_PORT="587" # Puerto SMTP
+SMTP_SECURE="false" # Normalmente siempre es false
 
-SMTP_TESTING="true"
-SMTP_TESTING_EMAIL_RECEPTOR="alexanderarmua1@gmail.com"
-SMTP_TESTING_EMAIL_USER="testutn88@gmail.com"
-SMTP_TESTING_EMAIL_PASSWORD=""
+SMTP_TESTING="true" # Si esta activo significa que va a enviar todos los mails a `SMTP_TESTING_EMAIL_RECEPTOR`
+SMTP_TESTING_EMAIL_RECEPTOR="alexanderarmua1@gmail.com" # A quien se envian los mails de prueba
+SMTP_TESTING_EMAIL_USER="testutn88@gmail.com" # Usuario para loguearse en el SMTP si es testing
+SMTP_TESTING_EMAIL_PASSWORD="" # Password para loguearse en el SMTP si es testing
 
 # Ruta actual
 RUTA_ACTUAL="http://localhost:3000"
