Pantalla impresion laboratorio abierto

--- a/.env.example
+++ b/.env.example
@@ -39,3 +39,4 @@ SMTP_TESTING_EMAIL_PASSWORD="" # Password para loguearse en el SMTP si es testin
 
 # Ruta actual
 RUTA_ACTUAL="http://localhost:3000"
+NEXT_PUBLIC_RUTA_ACTUAL="http://localhost:3000"
