--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     },
     {
       "name": "Agustina Razanov",
-      "email": "contribuyente2@example.com",
+      "email": "agustinarazanov@gmail.com",
       "url": "https://github.com/agustinarazanov"
     },
     {
