update env variables

--- a/.env.example
+++ b/.env.example
@@ -1,42 +1,39 @@
-# Since the ".env" file is gitignored, you can use the ".env.example" file to
-# build a new ".env" file when you clone the repo. Keep this file up-to-date
-# when you add new variables to `.env`.
+# Dado que el archivo ".env" está ignorado por git, se puede utilizar el archivo ".env.example" para
+# crear un nuevo archivo ".env" al clonar el repositorio. Es importante mantener este archivo actualizado
+# cuando se agreguen nuevas variables a `.env`.
 
-# This file will be committed to version control, so make sure not to have any
-# secrets in it. If you are cloning this repo, create a copy of this file named
-# ".env" and populate it with your secrets.
+# Este archivo será incluido en el control de versiones, por lo que no se deben almacenar secretos en él.
+# Al clonar el repositorio, se debe crear una copia de este archivo llamada ".env" y completarlo con los secretos.
 
-# When adding additional environment variables, the schema in "/src/env.js"
-# should be updated accordingly.
+# Al agregar variables de entorno adicionales, el esquema en "/src/env.js"
+# debe ser actualizado en consecuencia.
+
+# Las variables comentadas son opcionales, pero se pueden configurar si es necesario.
 
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
-DATABASE_URL="postgresql://postgres:password@localhost:5432/sge2"
+DATABASE_URL=postgresql://postgres:password@localhost:5432/sge2
 
 # Next Auth
-# You can generate a new secret on the command line with:
-# openssl rand -base64 32
-# https://next-auth.js.org/configuration/options#secret
-# NEXTAUTH_SECRET=""
-NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_SECRET= # Se puede generar desde la línea de comando con: openssl rand -base64 32
+NEXTAUTH_URL=http://localhost:3000
 
 # Next Auth Discord Provider
-DISCORD_CLIENT_ID=""
-DISCORD_CLIENT_SECRET=""
-SMTP_EMAIL_USER=""
-SMTP_EMAIL_PASSWORD=""
+# DISCORD_CLIENT_ID=
+# DISCORD_CLIENT_SECRET=
 
-# Envio de mails
-SMTP_MAIL_EMISOR="testutn88@gmail.com" # A nombre de quien se envian los mails
-SMTP_HOST="smtp.gmail.com" # Servidor SMTP
-SMTP_PORT="587" # Puerto SMTP
-SMTP_SECURE="false" # Normalmente siempre es false
+# Next Auth Keycloak Provider
+# KEYCLOAK_CLIENT_ID=
+# KEYCLOAK_CLIENT_SECRET=
+# KEYCLOAK_ISSUER=
 
-SMTP_TESTING="true" # Si esta activo significa que va a enviar todos los mails a `SMTP_TESTING_EMAIL_RECEPTOR`
-SMTP_TESTING_EMAIL_RECEPTOR="alexanderarmua1@gmail.com" # A quien se envian los mails de prueba
-SMTP_TESTING_EMAIL_USER="testutn88@gmail.com" # Usuario para loguearse en el SMTP si es testing
-SMTP_TESTING_EMAIL_PASSWORD="" # Password para loguearse en el SMTP si es testing
+# Envío de mails
+SMTP_MAIL_EMISOR=testutn88@gmail.com # A nombre de quién se envían los mails
+SMTP_HOST=smtp.gmail.com # Servidor SMTP
+SMTP_PORT=587 # Puerto SMTP
+# SMTP_SECURE=false # Normalmente siempre es false
 
-# Ruta actual
-RUTA_ACTUAL="http://localhost:3000"
-NEXT_PUBLIC_RUTA_ACTUAL="http://localhost:3000"
+# SMTP_TESTING=true # Si está activo significa que va a enviar todos los mails a `SMTP_TESTING_EMAIL_RECEPTOR`
+# SMTP_TESTING_EMAIL_RECEPTOR=alexanderarmua1@gmail.com # A quién se envían los mails de prueba
+# SMTP_TESTING_EMAIL_USER=testutn88@gmail.com # Usuario para loguearse en el SMTP si es testing
+# SMTP_TESTING_EMAIL_PASSWORD= # Contraseña para loguearse en el SMTP si es testing
