--- a/package.json
+++ b/package.json
@@ -53,12 +53,13 @@
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
     "dev": "next dev",
+    "format": "prettier --write .",
     "lint": "next lint",
     "start": "next start"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.6.0",
-    "@headlessui/react": "^2.1.2",
+    "@auth/prisma-adapter": "^2.8.0",
+    "@headlessui/react": "^2.2.1",
     "@hookform/resolvers": "^3.9.0",
     "@prisma/client": "^5.20.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
@@ -97,8 +98,8 @@
     "geist": "^1.3.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.400.0",
-    "next": "^14.2.1",
-    "next-auth": "^4.24.7",
+    "next": "^15.2.5",
+    "next-auth": "^4.24.11",
     "next-i18next": "^15.3.0",
     "nodemailer": "^6.9.15",
     "react": "^18.3.0",
