removed migrations + added log in with username

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src", "./*.ts", "./*.cjs", "./*.js", ".eslintrc.cjs", ".next/types/**/*.ts"],
+  "include": ["src/**/*", "*.ts", "*.cjs", "*.js", ".eslintrc.cjs", ".next/types/**/*.ts"],
   "exclude": ["node_modules", "src/generated/prisma"]
 }
