--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -9,18 +9,17 @@ services:
       retries: 5
       start_period: 3s
     env_file:
-      - /opt/sge2/.env
+      - ../.env
     volumes:
-      - /opt/sge2/data:/var/lib/postgresql/data
-      - /opt/sge2/pg_dump.sql:/docker-entrypoint-initdb.d/pg_dump.sql
+      - ../data:/var/lib/postgresql/data
+      - ../dump.sql:/docker-entrypoint-initdb.d/init.sql
     networks:
       - sge2
 
   app:
     image: registry.frba.utn.edu.ar/ext/sge2
-    build: .
     env_file:
-      - /opt/sge2/.env
+      - ../.env
     hostname: app
     networks:
       - sge2
@@ -31,7 +30,7 @@ services:
   proxy:
     image: nginx:1.27-alpine
     volumes:
-      - /opt/sge2/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
     ports:
       - "8000:80"
     networks:
