fix docker image

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -17,7 +17,7 @@ services:
       - sge2
 
   app:
-    image: sge
+    image: registry.frba.utn.edu.ar/ext/sge2
     env_file:
       - .env
     hostname: app
