--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -1,7 +1,6 @@
 services:
   db:
     image: postgres:17-alpine
-    hostname: db
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 2s
@@ -12,17 +11,12 @@ services:
       - .env
     volumes:
       - data:/var/lib/postgresql/data
-      - ./dump.sql:/docker-entrypoint-initdb.d/init.sql
-    networks:
-      - sge2
+      - ./sql:/docker-entrypoint-initdb.d
 
   app:
-    image: registry.frba.utn.edu.ar/ext/sge2
+    image: sge
     env_file:
       - .env
-    hostname: app
-    networks:
-      - sge2
     depends_on:
       db:
         condition: service_healthy
@@ -33,13 +27,8 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
     ports:
       - "8000:80"
-    networks:
-      - sge2
     depends_on:
       - app
-
-networks:
-  sge2:
 
 volumes:
   data:
