--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -14,7 +14,7 @@ services:
       - ./sql:/docker-entrypoint-initdb.d
 
   app:
-    image: sge
+    image: registry.frba.utn.edu.ar/ext/sge2
     env_file:
       - .env
     depends_on:
