--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
       - .env
     volumes:
       - data:/var/lib/postgresql/data
-      - ./sql:/docker-entrypoint-initdb.d
+      - ./db:/docker-entrypoint-initdb.d
 
   app:
     image: registry.frba.utn.edu.ar/ext/sge2
@@ -24,7 +24,7 @@ services:
   proxy:
     image: nginx:1.27-alpine
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./proxy:/etc/nginx/conf.d
     ports:
       - "8000:80"
     depends_on:
