--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
       - .env
     volumes:
       - data:/var/lib/postgresql/data
-      - $WORKSPACE/docker/dump.sql:/docker-entrypoint-initdb.d/init.sql
+      - /opt/sge2/dump.sql:/docker-entrypoint-initdb.d/init.sql
 
   app:
     image: registry.frba.utn.edu.ar/ext/sge2
@@ -24,7 +24,7 @@ services:
   proxy:
     image: nginx:1.27-alpine
     volumes:
-      - $WORKSPACE/docker/nginx.conf:/etc/nginx/conf.d/default.conf
+      - /opt/sge2/nginx.conf:/etc/nginx/conf.d/default.conf
     ports:
       - "8000:80"
     depends_on:
