--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -1,31 +1,48 @@
+name: sge2
+
 services:
   db:
-    image: postgres:17-alpine
+    image: postgres:17.4-alpine3.21
+    hostname: db
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 2s
       timeout: 15s
       retries: 5
       start_period: 3s
-    env_file:
-      - .env
+    env_file: .env
     volumes:
-      - /opt/sge2/data:/var/lib/postgresql/data
+      - data:/var/lib/postgresql/data
       - /opt/sge2/dump.sql:/docker-entrypoint-initdb.d/init.sql
+    networks:
+      - backend
 
   app:
     image: registry.frba.utn.edu.ar/ext/sge2
-    env_file:
-      - .env
+    hostname: app
+    env_file: .env
+    restart: unless-stopped
     depends_on:
       db:
         condition: service_healthy
+    networks:
+      - backend
+      - frontend
 
   proxy:
-    image: nginx:1.27-alpine
+    image: nginx:1.27.5-alpine
     volumes:
       - /opt/sge2/nginx.conf:/etc/nginx/conf.d/default.conf
     ports:
       - "8000:80"
     depends_on:
       - app
+    networks:
+      - frontend
+
+networks:
+  backend:
+  frontend:
+
+volumes:
+  data:
